[project]
name = "bluesky-simcom"
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "msgpack >= 1.0.0",
    "zmq",
    "bluesky-navdata",
    "openap",
    "pymodes",
    "cryptography",
    "pyopengl",
    "PyQt6",
    "PyQt6-WebEngine",
    "bluesky-guidata",
    "textual",
    "rtree"
]

authors = [
  { name=" Luca Martinoia", email="luca.martinoia@hotmail.it" },
]

description = "ATM simulator for ADS-B cybersecurity."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Development Status :: 4 - Beta",

    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",

    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
]

keywords = ["ATM", "ADS-B", "simulation", "aviation", "aircraft", "cybersecurity"]

[project.scripts]
bluesky = "bluesky.__main__:main"

[project.urls]
Homepage = "https://atm-excite.eu/"
Documentation = "https://github.com/LucaMartinoia/bluesky_SIMCOM/blob/master/bluesky/plugins/SIMCOM/README.md"
Repository = "https://github.com/LucaMartinoia/bluesky_SIMCOM"

[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
include = [
  "bluesky/*",
]
exclude = [
    "docs",
    "utils",
    "bluesky/test",
    "bluesky/resources/navdata",
    "bluesky/resources/graphics",
    "bluesky/resources/html"
]

[tool.hatch.build.targets.wheel.hooks.custom]
dependencies = ["setuptools>=69.1.1", "numpy"]